tests/base/parser/bad/type_t-forall-tid-period-with.scilla
scilla_version 0

library TestLib

(* invalid type *)
let f : forall 'A. nothing

contract Test
()
